edit team, login, registro
