# app/Http/Controllers/UserController.php
@@ -6,6 +6,7 @@ use AlpogoApi\Alpogo\HTTP\HttpCodes;
 use AlpogoApi\Alpogo\Repositories\AuthRepository;
 use AlpogoApi\Alpogo\Repositories\UserRepository;
 use AlpogoApi\Alpogo\Transformers\UserTransform;
+use AlpogoApi\Model\User\AccessToken;
 use AlpogoApi\Model\User\User;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
@@ -58,64 +59,14 @@ class UserController extends ApiController
     }
 
     /**
-     * @SWG\Post(
-     *     path="/users",
-     *     tags={"users"},
-     *     operationId="post_user",
-     *     summary="Registra un usuario",
-     *     description="",
-     *     consumes={"application/json", "application/xml"},
-     *     produces={"application/xml", "application/json"},
-     *     @SWG\Parameter(
-     *         name="body",
-     *         in="body",
-     *         description="",
-     *         required=true,
-     *         @SWG\Schema(ref="#/definitions/User"),
-     *     ),
-     *     @SWG\Response(
-     *         response=400,
-     *         description="Invalid input",
-     *     ),
-     *     @SWG\Response(
-     *         response=201,
-     *         description="Create successfully",
-     *     )
-     * )
-     */
-    public function store(Request $request)
-    {
-        $validator = $this->validateUser($request);
-
-        if ($validator->fails())
-            return $this->errorResponses->requiredParameters($validator->messages());
-
-        $user = User::create($request->all())->storePassword($request);
-
-        $response = new JsonResponse([
-            'message' => 'User create successfully',
-            'user' => $user
-        ], HttpCodes::CREATE);
-
-        return $response;
-    }
-
-    /**
      * @SWG\Get(
-     *     path="/users/{id}",
+     *     path="/user/",
      *     tags={"users"},
      *     summary="Detalle de usuario",
-     *     description="Retorna el detalle de un usaurio",
+     *     description="Retorna el detalle de un usaurio, parametro de access token Authorization por header.",
      *     produces={
      *         "application/json",
      *     },
-     *     @SWG\Parameter(
-     *         name="id",
-     *         in="path",
-     *         description="ID de un usuario",
-     *         type="integer",
-     *         required=true
-     *     ),
      *     @SWG\Response(
      *         response=200,
      *         description="OK"
@@ -132,12 +83,13 @@ class UserController extends ApiController
      *     )
      * )
      */
-    public function show($id)
+    public function show(Request $request)
     {
-        $user = User::find($id);
+        $access_token = $request->header('authorization');
 
-        if( ! is_numeric($id))
-            return $this->errorResponses->invalidIdSupplied();
+        $user_id = AccessToken::where('key', $access_token)->first()->user_id;
+
+        $user = User::find($user_id);
 
         if( ! $user )
             return $this->errorResponses->userNotFound();
